crates/swc_ecma_parser/tests/flow/invalid_syntax/migrated_0011.js
// No generics for getters and setters
({ get foo<T>() {} })
